# denokv-python

./: .env.local.example  .envrc  .gitignore  CHANGELOG.md  Dockerfile  Makefile  docker-bake.hcl  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  publish.yml
hack/: denokv.ipynb
scripts/: set_dev_version.py
src/denokv/: _datapath_pb2.py  _datapath_pb2.pyi  auth.py  backoff.py  datapath.py  errors.py  kv.py  result.py
stubs/fdb/: tuple.pyi
test/: advance_time.py  conftest.py  denokv_testing.py  test__rfc3339.py  test_advance_time.py  test_auth.py  test_backoff.py  test_datapath.py  test_denokv.py  test_denokv_testing.py  test_info.py  test_kv.py  test_kv__kvkey.py  test_result.py
testing/smoketest/: pyproject.toml
testing/smoketest/smoketest/: __init__.py  db.sql
