[tool.poetry]
name = "denokv"
version = "0.1.0"
description = "Connect to Deno KV databases from Python."
authors = ["Hal Blackburn <hwtb2@cam.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "denokv", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.12.2"
aiohttp = "^3.10.0"
yarl = "^1.9.4"
protobuf = "^5.27.3"
foundationdb = "^7.3.47"
v8serialize = "^0.1.0a1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
flake8 = "^7.1.0"
flake8-pyi = "^24.6.0"
Flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
mypy = "^1.11.1"
flake8-bugbear = "^24.4.26"
pytest-asyncio = "^0.23.8"
pytest-aiohttp = "^1.0.5"



[tool.poetry.group.dev-extra.dependencies]
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 80
extend-select = "B950"
extend-ignore = "E203,E501,E701"

[tool.isort]
profile = "black"
extra_standard_library = ["typing_extensions"]

[tool.mypy]
strict = true
