[tool.poetry]
name = "denokv"
version = "0.1.0"
description = "Connect to Deno KV databases from Python."
authors = ["Hal Blackburn <hwtb2@cam.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "denokv", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.12.2"
aiohttp = "^3.10.0"
yarl = "^1.9.4"
protobuf = "^5.27.3"
foundationdb = "^7.3.47"
v8serialize = "^0.1.0a1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.7"
isort = "^5.13.2"
mypy = "^1.11.1"
pytest-asyncio = "^0.23.8"
pytest-aiohttp = "^1.0.5"
types-protobuf = "^5.27.0.20240920"

[tool.poetry.group.dev-extra.dependencies]
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 80
extend-select = "B950"
extend-ignore = "E203,E501,E701"

[tool.isort]
profile = "black"
extra_standard_library = ["typing_extensions"]

[tool.mypy]
strict = true
mypy_path = "./stubs"

[[tool.mypy.overrides]]
module = "denokv._datapath_pb2"
# Generated protocol buffers stubs don't specify generic type params
disallow_any_generics = false

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff]
exclude = [
  # Generated protobuf files
  "src/denokv/_datapath_pb2.py",
  "src/denokv/_datapath_pb2.pyi",
]

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "D",   # pydocstyle
  "E",
  "F",
  "FA",  # flake8-future-annotations
  "PYI", # flake8-pyi
  "I",
]

ignore = [
  "D100", # "Missing docstring in public module" — not everything is documented yet
  "D101", # "Missing docstring in public class" — not everything is documented yet
  "D102", # "Missing docstring in public method" — not everything is documented yet
  "D103", # "Missing docstring in public function" — not everything is documented yet
  "D104", # "Missing docstring in public package" — not everything is documented yet
  "D105", # "Missing docstring in magic method" — not everything is documented yet
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
